# qualix

./: .coveragerc  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .snyk  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  check_all_jobs.py  check_artifacts.py  check_artifacts_latest.py  check_ci.py  check_ci2.py  check_e2e_curl.py  check_e2e_job.py  check_e2e_run52.py  check_jobs.py  check_lint_dynamic.py  check_lint_job.py  docker-compose.yml  docker-entrypoint.sh  download_artifact.py  download_e2e_log.py  fetch_ruff_log.py  get_annotations.py  get_check_run.py  get_check_run_detailed.py  get_check_runs_for_commit.py  get_e2e_annotations.py  get_e2e_annotations_run52.py  get_e2e_check_run.py  get_e2e_only.py  get_e2e_run53.py  list_all_check_runs.py  (+10 more)
.devcontainer/.devcontainer/: devcontainer.json
.github/: BRANCH_PROTECTION.md  labeler.yml
.github/.github/: CODEOWNERS  cliff.toml  dependabot.yml
.github/.github/ISSUE_TEMPLATE/: bug_report.md  flaky_test.md
.github/.github/workflows/: labeler.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: ci.yml  nightly.yml
allure/: index.html
allure/data/: behaviors.csv  behaviors.json  categories.csv  categories.json  packages.json  suites.csv  suites.json  timeline.json
allure/data/attachments/: 1001f987d025d623.txt  100b99f49041360a.txt  101e56374c62dd7f.txt  10206e7348a15f86.txt  1037c4a1f30c925a.txt  10419ad0b9838aad.txt  1065ff8e54a864ab.txt  107ebeec4fc2a02a.txt  1088908308e96f17.txt  108c6ae0d85d0f1e.txt  109130836e4ddd8.txt  10915ef2be450552.txt  109faebe8e54175b.txt  10bc3337c6c92cbe.txt  10beef808add434e.txt  10c87ec2b16b9867.txt  10cb16128c786e.txt  10db24f9fe9e2b7e.txt  10db5c228d5128c4.txt  10fb666e8adbbb3b.txt  10fbc1347eacc1cf.txt  1113e204e285d411.txt  112cb2f7e68b9b2a.txt  113218478bb7ae15.txt  1136be7404d22f00.txt  113a865f7647cb04.txt  1144f882fbde4e83.txt  114c55b28876636f.txt  1152b28900ccca77.txt  1158d59d28e53ecf.txt  115fed19214f7a7b.txt  116c31d06d67b288.txt  1174678168fbe6f.txt  117b333f76a0a6a6.txt  118b87fffb0fb9d1.txt  1194b15fde95b978.txt  119ee87fbeba9d14.txt  11b8b6f2708ff004.txt  11dd4cc005720475.txt  11fbe4c145145ea.txt  (+4407 more)
allure/data/test-cases/: 1009e3913f59fbc3.json  105152686c84c76d.json  1052d023ddca0831.json  105b3a3771f8c2e2.json  106fa466f9c3cb03.json  1072cbe241564482.json  107878b25fbb3a59.json  10792cbb0e82ff8.json  107af1ed4fc2e60f.json  107f8dd697e6349a.json  10832fcedba99981.json  10835147f129504b.json  1089e9acedacdf55.json  108c8d80ced34e96.json  108d4ee222b479bf.json  109299e90b2f9bb1.json  10a0de8eac5ac38c.json  10a55fdafaef7db5.json  10b63b7195d5afd3.json  10b7eba5ff1c9fdc.json  10c03d2fdb37b23a.json  10dce5d12bbc5f80.json  10e32b1bff346880.json  10e4ddd358da21a1.json  10e4e961f491e55a.json  10f1fc2a1c0d1099.json  1107e2b48c7e76f1.json  11082aef508f9b90.json  11209c3f5ec8c729.json  112dbb20047e8cef.json  1132bba362ad15c0.json  1135c8eefcb5a91a.json  11362b78774c14d7.json  1143cf0b7f36478f.json  114eb47dbc60f147.json  1152f25855b946fc.json  115455118695767c.json  115650e054cb7f4d.json  115699f2714000f6.json  11731245ae1289ab.json  (+6411 more)
allure/export/: influxDbData.txt  prometheusData.txt
allure/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
allure/widgets/: categories-trend.json  categories.json  duration-trend.json  duration.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
app/: __init__.py  config.py  dependencies.py  entrypoint.py  kafka_client.py  logging_config.py  main.py  middleware.py  security.py
app/api/: __init__.py  auth.py  health.py  openapi.py  users.py
app/models/: __init__.py  db.py  user.py
app/repositories/: __init__.py  user_repo.py
app/services/: __init__.py  validators.py
dev/bench/: data.js
docs/adr/: 001-custom-token-vs-jwt.md  002-sqlite-fallback-for-tests.md  003-bcrypt-for-passwords.md  004-fakeredis-in-tests.md  005-json-schema-contracts-vs-pact.md  README.md
docs/case-studies/: ci-pipeline-evolution.md
frontend/: index.html
infra/: prometheus.yml
infra/grafana/dashboards/: dashboards.yml
infra/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  sealed-secret.yaml.example  service.yaml
scripts/: check_db.py  mutation_test.py
tests/: conftest.py
tests/api/: conftest.py  test_auth_flows.py  test_frontend.py  test_health.py  test_schemathesis.py  test_users_api.py
tests/contract/: conftest.py  test_api_contracts.py
tests/e2e/: conftest.py  test_auth_flow.py
tests/e2e/pages/: base_page.py  dashboard_page.py  login_page.py
tests/factories/: user_factory.py
tests/integration/: conftest.py  test_database.py  test_kafka.py
tests/load/: locustfile.py
tests/plugins/: flaky_tracker.py
tests/unit/: conftest.py  test_auth_internals.py  test_auth_router.py  test_dependencies.py  test_kafka_client.py  test_logging_config.py  test_middleware.py  test_models.py  test_performance.py  test_property_based.py  test_security.py  test_time_dependent.py  test_user_repo.py  test_users_router.py  test_validators.py  test_validators_extended.py
