[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "qa-sentinel"
version = "1.0.0"
description = "Full-stack QA automation platform — Sitnikov Sergey"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Sitnikov Sergey", email = "ray013lefe@gmail.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = ["qa", "testing", "automation", "fastapi", "playwright"]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "redis[hiredis]>=5.0",
    "aiokafka>=0.11",
    "pydantic[email]>=2.8",
    "pydantic-settings>=2.14.2",
    "structlog>=24.4",
    "bcrypt>=4.2",
]

[project.optional-dependencies]
test = [
    # runners
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-xdist>=3.6",
    "pytest-rerunfailures>=14",
    "pytest-timeout>=2.3",
    "pytest-cov>=5.0",
    "pytest-playwright>=0.5",
    "pytest-benchmark>=4.0",
    # time control
    "time-machine>=2.14",
    # http
    "httpx>=0.28.1",
    "respx>=0.22",
    "asgi-lifespan>=2.1",
    # browser
    "playwright>=1.47",
    # property-based & fuzzing
    "hypothesis>=6.112",
    "schemathesis>=4.0",
    # contracts & integration
    "testcontainers[postgres,redis,kafka]>=0.12",
    "fakeredis>=2.26",
    "aiosqlite>=0.20",
    # data generation
    "faker>=30.0",
    "factory-boy>=3.3",
    # reporting
    "allure-pytest>=2.16",
    # ai assertions
    "anthropic>=0.34",
    "aiokafka>=0.11",
    "aiofiles>=24.1",
    # mutation testing
    "mutmut>=3.6",
]
load = [
    "locust>=2.31",
    "prometheus-client>=0.21",
]
lint = [
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
    "--cov=app",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml:reports/coverage.xml",
    "--cov-fail-under=80",
    "--benchmark-disable",      # benchmark только при --benchmark-only
]
markers = [
    "unit: unit tests — no IO",
    "integration: require real dependencies",
    "api: HTTP API tests",
    "e2e: end-to-end browser tests",
    "contract: consumer-driven contract tests",
    "slow: tests > 10s",
    "flaky: known flaky — tracked in GH Issues",
    "external: tests against external APIs (dummyjson.com)",
    "live_api: requires real internet connection",
]
timeout = 60

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/api/openapi.py",
    "*/migrations/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "PT"]
ignore = ["B008", "N805"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.mutmut]
paths = ["app"]
backup = false
runner = "pytest tests/unit/test_validators.py tests/unit/test_validators_extended.py tests/unit/test_security.py tests/unit/test_property_based.py -x --no-header -o 'addopts=' -o 'asyncio_mode=auto' --timeout=120 -q"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # B101 = assert_used — нормально в тестах
tests = ["B201", "B301", "B302", "B303", "B304", "B305", "B306",
         "B501", "B502", "B503", "B504", "B505", "B506",
         "B601", "B602", "B603", "B604", "B605", "B606", "B607"]
